# int4-runner

./: .gitattributes  .gitignore  Cargo.toml  PERFORMANCE.md  README.md
.cargo/: config.toml
.github/workflows/: build.yml  test.yml
src/: lib.rs  main.rs  server.rs
tests/: embeddings.rs  from_bytes.rs
tests/fixtures/: golden_embeddings.json
