[package]
name = "int4_runner"
version = "0.1.0"
edition = "2021"
authors = ["Geoff Seemueller"]
description = "INT4-quantized ONNX embedding model inference"
license = "MIT"
repository = "https://github.com/geoffsee/int4-runner"
exclude = ["weights/", "tokenizer/", "src/main.rs", "scripts/", ".github/", "node_modules/"]

[features]
default = ["server"]
server = ["dep:axum", "dep:tower-http", "dep:tokio", "dep:serde", "dep:serde_json"]

[dependencies]
ndarray = "0.17"
ort = { version = "2.0.0-rc.11", features = ["download-binaries"] }
tokenizers = "0.21"

# Server dependencies (optional — omit with default-features = false)
axum = { version = "0.7", features = ["json"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tower-http = { version = "0.5", features = ["cors"], optional = true }
