[package]
name = "int4_runner"
version = "0.1.2"
edition = "2021"
authors = ["Geoff Seemueller"]
description = "INT4-quantized ONNX embedding model inference"
license = "MIT"
repository = "https://github.com/geoffsee/int4-runner"
exclude = ["weights/", "tokenizer/", "src/main.rs", "scripts/", ".github/", "node_modules/"]

[features]
default = ["server"]
server = ["dep:axum", "dep:tower-http", "dep:tokio", "dep:serde", "dep:serde_json"]

[dependencies]
ndarray = "0.17"
ort = { version = "2.0.0-rc.11", features = ["download-binaries"] }
tokenizers = "0.21"

# Server dependencies (optional — omit with default-features = false)
axum = { version = "0.7", features = ["json"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tower-http = { version = "0.5", features = ["cors"], optional = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }

# On Windows, load ONNX Runtime as a DLL at runtime to avoid CRT linkage
# mismatch (ort-sys pre-built binaries use /MD, but esaxx-rs hardcodes /MT).
[target.'cfg(windows)'.dependencies.ort]
version = "2.0.0-rc.11"
features = ["load-dynamic"]
